# sl-1-0-sensor-model-repository-template

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  DISCLAIMER  LICENSE  README.md  sl-1-0-sensor-model-repository-template.srmd
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: No.0.RequirementsPhase.DefineModelRequirements.yaml  No.1.ImplementationPhase.IntegrateSimulation.yaml  add_to_project.yml  all.yaml  build.yml  build_and_test.yml  build_esmini.yml  build_openmcx.yml  build_osi-validation.yml  build_osi_field_checker.yml  build_tracefile_player.yml  build_tracefile_writer.yml  cl0.yml  cl1.yml  cl2.yml  cl3.yml  cpp-linter.yml  create_all_workflows.yml  delete-workflow-runs.yml  fmu_artifact.yml  fmu_checker.yml  markdown.yml  srmd-checker.yml  srmd-validator.yml  super-linter.yml  test_pipeline.yml  unit-tests.yml
.github/workflows/cl2/: Tracefile_Model_OSIFieldChecker.ssd  osi_check.txt
.github/workflows/jobs/: cl1.yml  cl2.yml  markdown.yml  srmd-validator.yml
doc/: README.md  sl-1-0-sensor-model-repository-template.reqif  sl-1-0-sensor-model-repository-template.stmd  sota.md
doc/data/: cert_ahmann.crt  expertStatement_req_m_01.json
lib/: README.md
rules/input_rules/: osi_common.yml
rules/output_rules/: osi_detectedobject.yml
src/: CMakeLists.txt  HelloWorldSensor.cpp  HelloWorldSensor.h  MySensorModel.cpp  MySensorModel.h  OSMP.cpp  OSMP.h  OSMPConfig.in.h  README.md  main.cpp  modelDescription.in.xml
test/: CMakeLists.txt  README.md  test.cpp
test/behavior/: README.md
test/behavior/001_detected_object/: README.md  SystemStructure.ssd
test/behavior/002_object_outside_fov/: README.md  SystemStructure.ssd  generate_test_trace.py
test/integration/: README.md  README_template.md
test/integration/001_output_osi_fields/: Tracefile_Model_OSIFieldChecker.ssd  test_action.yml
test/integration/001_smoke_test/: SystemStructure.ssd
test/integration/001_smoke_test_tracefile/: 20240617T162749Z_sv_370_244_20_one_object.osi  SystemStructure.ssd
test/integration/002_output_osi_fields/: SystemStructure.ssd  osi_check.txt
test/integration/002_smoke_test_scenario/: 3rd-party_LICENSE  README.md  SystemStructure.ssd  cut-in_simple.xosc
test/integration/003_output_osi_fields/: README.md  SystemStructure.ssd  osi_check.txt
test/integration/004_smoke_test_scenario_to_tracefile/: README.md  SystemStructure.ssd  SystemStructure.ssp
test/integration/004_tracefile_analysis/: README.md  SystemStructure.ssd  analyze.py  straight_500m.xosc
test/unit/: CMakeLists.txt  README.md  test.cpp
